Cleanup parsing.lucene module and fix deprecations
 - all lucene deprecations fixed
 - javac warnings fixed
 - JDK 17 language level and other cleanup